--- a/gv/templates/gv/cv1.html
+++ b/gv/templates/gv/cv1.html
@@ -315,9 +315,10 @@ d3.json("/getPQArmData",  function(error, data) {
     
       
 });
+              
 
 function testMM (d) {
-  location.href = "cv3/" + d.chrom;
+  location.href = "/cv4/{{patient.pk}}/" + d.chrom;
 }
 
 
@@ -329,7 +330,7 @@ function testMM (d) {
      
       </div>
     </div>
-    <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">New Patient</a>
+    <a href="/admin/gv/patient/add/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">New Patient</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
 </html>
