--- a/gv/templates/gv/cv4.html
+++ b/gv/templates/gv/cv4.html
@@ -99,7 +99,7 @@
             <i class="material-icons">more_vert</i>
           </button>
           <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item">Logout</li>
+            <a href="/accounts/logout"><li class="mdl-menu__item">Logout</li></a>
           </ul>
         </div>
       </div>
@@ -793,7 +793,7 @@ class GenomeSlider {
      
       </div>
     </div>
-    <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">New Patient</a>
+    <a href="/admin/gv/patient/add/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">New Patient</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 </body>
