--- a/gv/templates/registration/login.html
+++ b/gv/templates/registration/login.html
@@ -1,20 +1,73 @@
-{% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+<html>
+<head>
+    <!-- Material Design Lite CSS -->
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
+    <!-- Font Awesome CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Material Design icon font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</head>
 
-    <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-        <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-        </table>
+<style>
+    .util-center {
+        margin: auto;
+    }
 
-        <input type="submit" value="login" />
-        <input type="hidden" name="next" value="{{ next }}" />
-    </form>
+    .util-max-512px {
+        max-width: 512px;
+    }
+
+    .util-spacing-h--40px {
+        margin-top: 40px;
+        margin-bottom: 40px
+    }
+    .util-no-decoration {
+        text-decoration: none;
+    }
+</style>
+
+<body style="background-color:#0747a6">
+
+<div class="mdl-grid">
+    <img class="util-center mdl-color-text--white" src="/static/images/logo2.png " height=70 width=70></img>
+</div>
+<div class="mdl-grid">
+    <h1 class="util-center mdl-color-text--white" style="font-size: 24px; font-weight: 500; line-height: 28px; margin-top: 48px;">Log in to continue to Genome Visualizer</h1>
+</div>
+<div class="mdl-grid">
+    
+    <div class="mdl-card mdl-shadow--16dp util-center util-spacing-h--40px">
+        <div class="mdl-card__supporting-text mdl-grid">
+            {% if form.errors %}
+                <p class="mdl-color-text--accent">Your username and password didn't match. Please try again.</p>
+            {% endif %}
+
+            <form method="post" action="{% url 'login' %}" style="width:100%">
+                {% csrf_token %}
+                <div>
+                    <label></label>
+                </div>
+                    <table>
+                    <tr>
+                        <td style="padding-top:20px; font-weight:300">{{ form.username.label_tag }}</td>
+                        <td style="padding-top:20px">{{ form.username }}</td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top:20px">{{ form.password.label_tag }}</td>
+                        <td style="padding-top:20px">{{ form.password }}</td>
+                    </tr>
+                    </table>
+            
+                    <input style="margin-top:20px; background-color:#0747a6" class="mdl-cell mdl-cell--12-col mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-color-text--white" type="submit" value="login" />
+                    <input type="hidden" name="next" value="{{ next }}" />
+                </form>
+
+        </div>
+    </div>
+</div>
+
+<!-- Material Design Lite JavaScript -->
+<script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
+
+</body>
+</html>
